# RUM

./: .gitignore  Cargo.toml  Dockerfile  Dokerfile  README.md  build.rs  go.mod
.github/workflows/: build.yaml  coverage.lcov  coverage.yaml  coverage.yml  publish.yaml
dockers/: Dokerfile
dockers/distroless/: Dokerfile
result/: cab.7z  file4.txt  output2.tar
result/test/: file1.txt
result1/: .test2.txt.icloud
src/: archiver.rs  cli.rs  extractor.rs  format.rs  main.rs  verbose.rs
src/archiver/: Iha.rs  cab.rs  lha.rs  rar.rs  sevenz.rs  tar.rs  zip.rs
src/archiver/os/: linux.rs
src/extractor/: cab.rs  lha.rs  rar.rs  sevenz.rs  tar.rs  zip.rs
test/: fcpst.tar  fcpst1.tar  file2.txt
